* feat: spring boot migration to version 4 * feat: swagger for api