@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.1</version>
+        <version>4.0.5</version>
         <relativePath/>
     </parent>
 
@@ -24,7 +24,11 @@
         <log4j2.version>2.23.1</log4j2.version>
         <jfx.version>23</jfx.version>
         <kotlin.version>2.2.20</kotlin.version>
+        <kotlin.coroutines.version>1.10.2</kotlin.coroutines.version>
         <lombok.version>1.18.30</lombok.version>
+        <swagger.version>3.0.0</swagger.version>
+        <sqlite.version>3.51.1.0</sqlite.version>
+        <hibernate.version>7.3.0.Final</hibernate.version>
     </properties>
 
     <dependencies>
@@ -63,17 +67,12 @@
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
-            <version>3.51.1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>io.hypersistence</groupId>
-            <artifactId>hypersistence-utils-hibernate-63</artifactId>
-            <version>3.11.0</version>
+            <version>${sqlite.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate.orm</groupId>
             <artifactId>hibernate-community-dialects</artifactId>
-            <version>6.2.5.Final</version>
+            <version>${hibernate.version}</version>
         </dependency>
 
         <dependency>
@@ -134,12 +133,18 @@
         <dependency>
             <groupId>org.jetbrains.kotlinx</groupId>
             <artifactId>kotlinx-coroutines-core</artifactId>
-            <version>1.10.2</version>
+            <version>${kotlin.coroutines.version}</version>
+        </dependency>
+
+        <!--swagger-->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>${swagger.version}</version>
         </dependency>
     </dependencies>
 
     <build>
-        <!--<testSourceDirectory>target/generated-test-sources/test-annotations</testSourceDirectory>-->
         <finalName>${project.name} ${project.version}</finalName>
 
         <plugins>
@@ -147,6 +152,15 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
+                    <!--<mainClass>com.FrameHopper.app.FrameHopperApiApplication</mainClass>-->
+                    <mainClass>com.FrameHopper.app.EngineerApplication</mainClass>
+                    <jvmArguments>-Dspring.application.admin.enabled=true</jvmArguments>
+                    <wait>1000</wait>
+                    <maxAttempts>180</maxAttempts>
+                    <jvmArguments>
+                        --module-path "C:\Program Files\Java\javafx-sdk-23.0.1\lib"
+                        --add-modules javafx.controls,javafx.fxml,javafx.swing
+                    </jvmArguments>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
@@ -154,7 +168,22 @@
                         </exclude>
                     </excludes>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>pre-integration-test</id>
+                        <goals>
+                            <goal>start</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>post-integration-test</id>
+                        <goals>
+                            <goal>stop</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
+
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
@@ -233,6 +262,25 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>generate-openapi-docs</id>
+                        <phase>integration-test</phase>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <apiDocsUrl>http://localhost:8080/v3/api-docs</apiDocsUrl>
+                    <outputFileName>swagger.json</outputFileName>
+                    <outputDir>${project.build.directory}</outputDir>
+                </configuration>
             </plugin>
         </plugins>
     </build>
